Bug 308421 - Auto-hidden tab bar remains invisible when a second tab is opened
Summary: Auto-hidden tab bar remains invisible when a second tab is opened
Status: RESOLVED FIXED
Alias: None
Product: rekonq
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 1.1
Platform: Gentoo Packages Linux
: NOR major
Target Milestone: ---
Assignee: Andrea Diamantini
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-15 02:05 UTC by Frank Steinmetzger
Modified: 2012-10-17 20:00 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frank Steinmetzger 2012-10-15 02:05:09 UTC
Starting with version 1.1, Rekonq got a bad bug:
I set the tab bar to be hidden when only one tab is open. When another tab is opened, the bar does not appear any more. The tabs themselves are there, I can switch between them with the keyboard as usual, the bar is just not visible.
In 1.1, the new tab button was there, overlaid over the displayed page, this is gone in 1.2.

Reproducible: Always

Steps to Reproduce:
Set tab bar to hide when only one tab is open in Preferences → Tabbed browsing.
Open rekonq.
Press Ctrl+T or open a tab by any other means (if the restored session didn't already have several tabs).
Actual Results:  
The tab bar does not appear.

Expected Results:  
Since a second tab was opened, the tab bar should appear.
Comment 1 Andrea Diamantini 2012-10-17 20:00:30 UTC
Git commit 296daf6865daf07d75b9dfa5ff96c003f68f4410 by Andrea Diamantini.
Committed on 17/10/2012 at 21:59.
Pushed by adjam into branch 'master'.

Fix tab bar visibility when set as auto-hide

M  +24   -24   src/mainview.cpp

http://commits.kde.org/rekonq/296daf6865daf07d75b9dfa5ff96c003f68f4410