Fix tab bar visibility when set as auto-hide

BUG: 308421